# guacamayo

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pipeline.sh
backend/: Cargo.toml
backend/src/: database.rs  jwt.rs  kernel.rs  main.rs  mod.rs  redis.rs  router.rs  session.rs
backend/src/models/: user.rs
backend/templates/: index.html.hbs
guacamayo/app/Http/Controllers/: SSOController.php
guacamayo/app/Http/Middleware/: VerifyCsrfToken.php
guacamayo/resources/views/: index.blade.php
guacamayo/routes/: web.php
test/: start.sh
test/dc1_server_local/: index.php
test/test_server_3/: index.php
tests/s1/: index.php
tests/s2/: index.php
web/: .env  README.md  app  artisan  bootstrap  composer.json  config  database  package.json  phpunit.xml  public  resources  routes  server.php  storage  tests  vendor  webpack.mix.js
