[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
redis = "0.21.4"
jsonwebtoken = "7.2.0"
mysql = "21.0.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "handlebars_templates", "tera_templates", "serve"]